# file-storage

./: .gitignore  404.html  Cargo.toml  README.md  eslint.config.js  file-storage-client.html  flake.nix  hashmap.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.html
assets/: app.B4R-pQnK.js  app.BFIEuRcQ.js  app.BOZafIlD.js  app.BxjSqRXC.js  app.C_vxEz7v.js  app.CsQNeF1K.js  app.DCAkX6BH.js  app.DrI8Vzgv.js  app.G3_iN8q4.js  elements_show-image.md.CWWsqWlk.js  elements_show-image.md.Cs7prDY7.lean.js  elements_show-image.md.D7enLtE_.js  elements_show-image.md.MQFhESMT.js  elements_show-image.md.TEdZtfFT.js  elements_upload-files.md.BfQrX7UY.lean.js  elements_upload-files.md.CJQedAT4.lean.js  elements_upload-files.md.DNItBXuY.js  elements_upload-files.md.gZWmYZVc.js  file-storage-client.md.BZCGISUs.js  index.md.-kjHkzgJ.js  index.md.DPNAKD3B.lean.js  index.md.tTfiPtrU.js  setup.md.B36DMlLG.js  setup.md.BfjDa4KK.lean.js  setup.md.BjJXXtZx.js  setup.md.CAeu3JFa.js  setup.md.vg48Spnj.lean.js  style.BU6b5gQi.css  style.SBK_hYsn.css
backend/: .rustc_info.json
dnas/file_storage_consumer/zomes/coordinator/file_storage_gateway/: Cargo.toml  zome.nix
dnas/file_storage_consumer/zomes/coordinator/file_storage_gateway/src/: lib.rs  provider.rs  requestor.rs  types.rs
dnas/file_storage_provider/zomes/coordinator/file_storage/: Cargo.toml  zome.nix
dnas/file_storage_provider/zomes/coordinator/file_storage/src/: lib.rs
dnas/file_storage_provider/zomes/integrity/file_storage/: Cargo.toml  zome.nix
docs/: file-storage-client.md  index.md  setup.md  (+1 more)
(+821 files in other folders)
