[package]
name = "file_storage"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "File storage zome to store files in holochain"

[lib]
crate-type = ["cdylib", "rlib"]
name = "file_storage"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

file_storage_integrity = { path = "../../integrity/file_storage" }
